--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Math Genius AI</title>
-    <script defer src="/static/script.js"></script>
+    <script defer src="script.js"></script>
     <style>
         body { font-family: Arial, sans-serif; padding: 2rem; background-color: #f0f4f8; }
         #solution { margin-top: 20px; white-space: pre-wrap; }
